--- a/index.html
+++ b/index.html
@@ -5,8 +5,104 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <img src="img/logo-sedona.svg" width="140" height="72" alt="Логотип сайта Седона">
+        <ul class="site-navigation">
+          <li><a href="main-information.sedona">Информация</a></li>
+          <li><a href="gallery.sedona">Фото и видео</a></li>
+          <li><a href="maps.sedona">Карта Штата</a></li>
+          <li><a href="hotels-information.sedona">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <main class="main-content">
+      <h1 class="visually-hidden">Sedona</h1>
+      <img src="img/welcome-sedona.png" width="459" height="353" alt="welcome to the gorgeous sedona">
+      <img src="img/polygon.svg" width="1201" height="59" alt="polygon">
+
+      <section class="advantages">
+        <h2>Седона - небольшой  городок в Аризоне, заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3>Настоящий городок</h3>
+              <p>№1<p>
+              <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img src="img/real-city.jpg" width="800" height="256" alt="Фото города">
+            </li>
+            <li class="advantages-item">
+              <h3>Там есть Мост дьявола</h3>
+              <p>№2</p>
+              <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+              <img src="img/devils-bridge.jpg" width="800" height="256" alt="Фото моста дьявола">
+            </li>
+            <li class="advantages-item">
+              <h3>Небольшая площадь</h3>
+              <p>№3</p>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-item">
+              <h3>Красивая дорога</h3>
+              <p>№4</p>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages-item">
+              <h3>Мало туристов</h3>
+              <p>№5</p>
+              <p>Большинство едет в гранд каньон и толпится там</p>
+            </li>
+          </ul>
+      </section>
+
+      <section class="suggestions">
+        <ul class="suggestions-list">
+          <li class="suggestions-item">
+            <img src="img/house-icon.svg" width="75" height="72" >
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="suggestions-item">
+            <img src="img/food-icon.svg" width="74" height="70">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="suggestions-item">
+            <img src="img/gift-icon.svg" width="64" height="76">
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и местного производства!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="next-steps">
+        <b>Заинтересовались?</b>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложение гостиниц в Седоне</p>
+       <img src="img/map.png" width="1200" height="594" alt="Карта">
+      </section>
+    </main>
+
+    <footer class="main-footer">
+      <p class="hashtag">#visitsedona</p>
+      <div class="footer-social">
+        <ul>
+          <li><a href="twitter.sedona" class="social-button"><img src="img/tw-icon.svg" width="46" height="48" alt="Twitter"></a></li>
+          <li><a href="facebook.sedona" class="social-button"><img src="img/fb-icon.svg" width="46" height="48" alt="Facebook"></a></li>
+          <li><a href="youtube.sedona" class="social-button"><img src="img/youtube-icon.svg" width="46" height="48" alt="Youtube"></a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        <p>Website by:</p>
+        <a href="https://htmlacademy.ru/" class="button"><img src="img/html-logo.svg" width="115" height="41"></a>
+      </div>
+    </footer>
+
+    <section class="modal-search">
+      <h2>Поиск гостиницы в Седоне</h2>
+      <!--Здесь будет форма-->
+      <a class="button" href="hotels-search.sedona">Найти</a>
+      </section>
 
   </body>
 </html>
