Основное задание: продолжаем разметку личного проекта
Это правильный вариант!!!!!!!Сделала разметку для всех форм и пороботала над доступностю. Сделала разметку для внутренней страницы сайта , назвала inner.html (также для всех форм и доступно)

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <input type="text" name="childrens">
           </label>
         </p>
-        <a class="button" href="hotels-search.sedona">Найти</a>
+        <a class="button" href="hotels-search.sedona1">Найти</a>
       </form>
       </section>
 
