--- a/inner.html
+++ b/inner.html
@@ -106,7 +106,7 @@
                 <p>Апартаменты от 2000р.</p>
                 <ul class="options">
                   <li class="option-item"><a href="more.about">Подробнее</a></li>
-                  <li class="option-item"><a href="reserve">Забронировать</a></li>
+                  <li class="option-item"><a href="reserve1">Забронировать</a></li>
                 </ul>
                 <p class="rating">Рейтинг: 9,2</p>
               </li>
